@@ -186,106 +186,7 @@ void hollow_rect(const int x1, const int y1, const int x2, const int y2)
     glEnd();
 }
 
-/*
-// FIXME- clean up text rendering
-void text(const char* string, const int x, const int y)
-{
-    glRasterPos2f(x*10.0, y*10.0);
 
-    for(int i=0; string[i]; i++)
-    {
-        glutBitmapCharacter(GLUT_BITMAP_HELVETICA_12, string[i]);
-    }
-}
-void text(wxString* string, const int x, const int y)
-{
-    glRasterPos2f(x*10.0, y*10.0);
-
-    const int len = string->Length();
-    for(int i=0; i<len; i++)
-    {
-        glutBitmapCharacter(GLUT_BITMAP_HELVETICA_12, (*string)[i]);
-    }
-}
-
-int text_return_end_x(wxString* string, const int x, const int y)
-{
-    glRasterPos2f(x*10.0, y*10.0);
-
-    const int len = string->Length();
-    for(int i=0; i<len; i++)
-    {
-        glutBitmapCharacter(GLUT_BITMAP_HELVETICA_12, (*string)[i]);
-    }
-
-    // find where text ends
-    float rasterPos[4];
-    glGetFloatv(GL_CURRENT_RASTER_POSITION,rasterPos);
-    return (int)round( rasterPos[0] );
-
-}
-
-// used for track name, in case it's too long
-void text_with_bounds(wxString* string, const int x, const int y, const int max_x)
-{
-    glRasterPos2f(x*10.0, y*10.0);
-    const int len = string->Length();
-
-    for(int i=0; i<len; i++)
-    {
-       // std::cout << ">" << (*string)[i] << "<" << std::endl;
-        glutBitmapCharacter(GLUT_BITMAP_HELVETICA_12, (*string)[i]);
-
-        // if text is too long
-        float rasterPos[4];
-        glGetFloatv(GL_CURRENT_RASTER_POSITION,rasterPos);
-        if(rasterPos[0] > max_x)
-        {
-            glutBitmapCharacter(GLUT_BITMAP_HELVETICA_12, '.');
-            glutBitmapCharacter(GLUT_BITMAP_HELVETICA_12, '.');
-            glutBitmapCharacter(GLUT_BITMAP_HELVETICA_12, '.');
-            return;
-        }
-    }
-}
-*/
-void small_text(const char* string, const int x, const int y)
-{
-    glRasterPos2f(x*10.0, y*10.0);
-
-    for(int i=0; string[i]; i++)
-    {
-        glutBitmapCharacter(GLUT_BITMAP_HELVETICA_10, string[i]);
-    }
-}
-void character(const char character, const int x, const int y)
-{
-    glRasterPos2f(x*10.0, y*10.0);
-    glutBitmapCharacter(GLUT_BITMAP_HELVETICA_12, character);
-}
-void small_character(const char character, const int x, const int y)
-{
-    glRasterPos2f(x*10.0, y*10.0);
-    glutBitmapCharacter(GLUT_BITMAP_HELVETICA_10, character);
-}
-/*
-void small_text_newline_between_words(const char* string, const int x, const int y)
-{
-    glRasterPos2f(x*10.0, y*10.0);
-
-    int line=0;
-    for(int i=0; string[i]; i++)
-    {
-        if(string[i]==' ')
-        {
-            line++;
-            glRasterPos2f(x*10.0, y*10.0+line*150);
-        }
-        else
-            glutBitmapCharacter(GLUT_BITMAP_HELVETICA_10, string[i]);
-    }
-}
-*/
 void triangle(const int x1, const int y1, const int x2, const int y2, const int x3, const int y3)
 {
     glBegin(GL_TRIANGLES);
